data/derived/sp14/progs/unify/prog4126.ml.out
Characters 64-65:
  Sine e           -> sin(pi*.e)
                              ^
Error: This expression has type expr but an expression was expected of type
         float
